err/clutchclient.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/clutchclient'...
Listing './lib/python3.5/site-packages/clutchclient/commands'...
Compiling './lib/python3.5/site-packages/clutchclient/commands/dev.py'...
***   File "./lib/python3.5/site-packages/clutchclient/commands/dev.py", line 102
    print 'Serving at %s%sview/%s/%s/' % (
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clutchclient/commands/upload.py'...
***   File "./lib/python3.5/site-packages/clutchclient/commands/upload.py", line 107
    print 'Uploaded new version: %s' % (resp,)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clutchclient/commands/version.py'...
***   File "./lib/python3.5/site-packages/clutchclient/commands/version.py", line 19
    print 'Clutch Client Version: %s' % (vstr,)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clutchclient/utils.py'...
***   File "./lib/python3.5/site-packages/clutchclient/utils.py", line 53
    print 'The username and password you provided were invalid, please try again.'
                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clutchclient-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
